--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bethany.matthew.matthew">
    <application
-        android:label="New 마태복음"
+        android:label="박경호 성경"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
